--- a/ApplicationC/ApplicationC.csproj
+++ b/ApplicationC/ApplicationC.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <StartupObject></StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,7 +21,7 @@
 
   <ItemGroup>
     <Reference Include="SousFormulaire">
-      <HintPath>..\..\..\Librairie\SousFormulaire\bin\Debug\SousFormulaire.dll</HintPath>
+      <HintPath>..\..\SousFormulaire\bin\Debug\SousFormulaire.dll</HintPath>
     </Reference>
   </ItemGroup>
 
