--- a/ApplicationC/ApplicationC.csproj
+++ b/ApplicationC/ApplicationC.csproj
@@ -24,7 +24,7 @@
 
   <ItemGroup>
     <Reference Include="SousFormulaire">
-      <HintPath>..\..\SousFormulaire\bin\Debug\SousFormulaire.dll</HintPath>
+      <HintPath>..\..\..\Librairie\SousFormulaire\bin\Debug\SousFormulaire.dll</HintPath>
     </Reference>
   </ItemGroup>
 
